--- a/index.html
+++ b/index.html
@@ -176,7 +176,20 @@
           </div>
           <div style="background:url(imgs/captura-trifasico.png)center;background-size: cover;" class="tarjeta-rest">
             <div class="wrap-text_tarjeta-rest">
-              <h3>landing Page</h3>
+              <h3>landing Page Arroz Trifasico</h3>
+              <p>landing Page para cualquier sitio o pagina web de restaurantes</p>
+              <div class="cta-wrap_tarjeta-rest">
+                <div class="precio_tarjeta-rest">
+                  <span>GRATIS</span>
+                </div>
+                <div class="cta_tarjeta-rest">
+                  <a href="trifasico.html">Ver ahora</a>
+                </div>
+              </div>
+            </div>  
+          <div style="background:url(imgs/frijolada.png)center;background-size: cover;" class="tarjeta-rest">
+            <div class="wrap-text_tarjeta-rest">
+              <h3>landing Page Frijolada</h3>
               <p>landing Page para cualquier sitio o pagina web de restaurantes</p>
               <div class="cta-wrap_tarjeta-rest">
                 <div class="precio_tarjeta-rest">
